# ModelMesh-Serverless-ML-Model-Serving-and-Testing

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: deploy-backend-and-vercel.yml
alembic/: env.py
alembic/versions/: 20260310_01_initial_schema.py  20260314_02_comparison_jobs.py  20260314_03_comparison_job_s3_key.py  20260315_04_tenant_auth_and_usage.py
apps/api/: README.md  main.py
apps/api/services/: auth.py  comparison_jobs.py  dataset_evaluation.py  db.py  huggingface_inference.py  kaggle_ingest.py  model_registry.py  prediction_logs.py  queue.py  runtime_state.py  storage.py  tenant_usage.py
apps/worker/: README.md  main.py
docs/: demo-budget-profile.md  deployment-guide.md  development-plan.md  github-actions-cicd-setup.md  load-test-k6.js  observability-and-load-test.md
frontend/: index.html  tailwind.config.ts
frontend/api/: [...path].ts
frontend/public/samples/: credit_risk_small.csv  customer_churn_small.csv
frontend/src/: App.tsx  index.css
frontend/src/components/: AppLayout.tsx  AppSidebar.tsx
frontend/src/components/dashboard/: ABVisualization.tsx  DataUploadPanel.tsx  MetricsPanel.tsx  ModelComparisonPanel.tsx  MonitoringPanel.tsx  (+2 more)
frontend/src/lib/: api-client.ts  ml-api.ts
frontend/src/pages/: Architecture.tsx  Dashboard.tsx  System.tsx
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
modelmesh_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared/schemas/: contracts.py
