[project]
name = "modelmesh-api"
version = "0.1.0"
description = "Backend scaffold for ModelMesh"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "huggingface_hub>=1.1.0,<2.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["apps", "apps.api", "apps.api.services", "shared", "shared.schemas"]
